[tool.poetry]
name = "cepan"
version = "0.1.0"
description = "cepan is a client library that retrieves data from aws cost explore as a pandas dataframe."
authors = ["kanga333 <e411z7t40w@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
boto3 = "^1.17.19"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
